fixe some margin issues on mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -146,6 +146,11 @@ button:hover {
 }
 
 @media (max-width: 400px) {
+
+  .mainWrapper{
+    margin-bottom: 50px;
+  }
+
   .title,
   button {
     font-size: 1.6em;
